--- a/liquid-haskell/session20/app/.liquid/Main.hs.cst.html
+++ b/liquid-haskell/session20/app/.liquid/Main.hs.cst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>app/Main.hs</title>
+<title>/home/alvarorp00/Documents/uam/master/verification/liquid-haskell/session20/app/Main.hs</title>
 </head>
 <head>
 <link type='text/css' rel='stylesheet' href='liquid.css' />
@@ -10,7 +10,7 @@
 <body>
 <hr>
 Put mouse over identifiers to see inferred types
-<pre><span class=hs-linenum> 1: </span><a class=annot href="#"><span class=annottext>{VV##369 : GHC.Types.Module | $k_##370}</span><span class='hs-keyword'>module</span></a> <span class='hs-conid'>Main</span> <span class='hs-keyword'>where</span>
+<pre><span class=hs-linenum> 1: </span><a class=annot href="#"><span class=annottext>{VV##377 : GHC.Types.Module | $k_##378}</span><span class='hs-keyword'>module</span></a> <span class='hs-conid'>Main</span> <span class='hs-keyword'>where</span>
 <span class=hs-linenum> 2: </span>
 <span class=hs-linenum> 3: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>LHExercises</span>
 <span class=hs-linenum> 4: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Maybe</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Maybe</span>
@@ -18,9 +18,9 @@ Put mouse over identifiers to see inferred types
 <span class=hs-linenum> 6: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Tuple</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Tuple</span>
 <span class=hs-linenum> 7: </span>
 <span class=hs-linenum> 8: </span><span class='hs-definition'>main</span> <span class='hs-keyglyph'>::</span> <span class='hs-conid'>IO</span><span class='hs-conid'>()</span>
-<span class=hs-linenum> 9: </span><a class=annot href="#"><span class=annottext>(GHC.Types.IO {lq_tmp$x##365 : () | $k_##364[VV##363:=lq_tmp$x##365][lq_tmp$x##362:=Main.main]})</span><span class='hs-definition'>main</span></a> <span class='hs-keyglyph'>=</span> <span class='hs-keyword'>do</span>
-<span class=hs-linenum>10: </span>    <span class='hs-varid'>putStrLn</span> <a class=annot href="#"><span class=annottext>{lq_tmp$x##335 : [GHC.Types.Char] | len lq_tmp$x##335 == strLen lq_anf$##7205759403792801478##d234
-                                    &amp;&amp; lq_tmp$x##335 ~~ lq_anf$##7205759403792801478##d234}</span><span class='hs-str'>"Exercise 9.3"</span></a>
+<span class=hs-linenum> 9: </span><a class=annot href="#"><span class=annottext>(GHC.Types.IO {lq_tmp$x##373 : () | $k_##372[VV##371:=lq_tmp$x##373][lq_tmp$x##370:=Main.main]})</span><span class='hs-definition'>main</span></a> <span class='hs-keyglyph'>=</span> <span class='hs-keyword'>do</span>
+<span class=hs-linenum>10: </span>    <span class='hs-varid'>putStrLn</span> <a class=annot href="#"><span class=annottext>{lq_tmp$x##343 : [GHC.Types.Char] | len lq_tmp$x##343 == strLen lq_anf$##7205759403792842301##dcFv
+                                    &amp;&amp; lq_tmp$x##343 ~~ lq_anf$##7205759403792842301##dcFv}</span><span class='hs-str'>"Exercise 9.3"</span></a>
 <span class=hs-linenum>11: </span>    <span class='hs-comment'>-- Get element removed</span>
 <span class=hs-linenum>12: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isJust okRemove: " ++ show (isJust LHExercises.okRemove))</span>
 <span class=hs-linenum>13: </span>    <span class='hs-comment'>-- if isJust LHExercises.okRemove</span>
