--- a/liquid-haskell/session20/app/.liquid/Main.hs.html
+++ b/liquid-haskell/session20/app/.liquid/Main.hs.html
@@ -19,13 +19,14 @@ Put mouse over identifiers to see inferred types
 <span class=hs-linenum> 7: </span>
 <span class=hs-linenum> 8: </span><span class='hs-definition'>main</span> <span class='hs-keyglyph'>::</span> <span class='hs-conid'>IO</span><span class='hs-conid'>()</span>
 <span class=hs-linenum> 9: </span><a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-definition'>main</span></a> <span class='hs-keyglyph'>=</span> <span class='hs-keyword'>do</span>
-<span class=hs-linenum>10: </span>    <span class='hs-varid'>putStrLn</span> <a class=annot href="#"><span class=annottext>[GHC.Types.Char]</span><span class='hs-str'>"Exercise 9.3"</span></a>
+<span class=hs-linenum>10: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>[GHC.Types.Char]</span><span class='hs-str'>"Exercise 9.3"</span></a>
 <span class=hs-linenum>11: </span>    <span class='hs-comment'>-- Get element removed</span>
-<span class=hs-linenum>12: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isJust okRemove: " ++ show (isJust LHExercises.okRemove))</span>
-<span class=hs-linenum>13: </span>    <span class='hs-comment'>-- if isJust LHExercises.okRemove</span>
-<span class=hs-linenum>14: </span>    <span class='hs-comment'>--     then (putStrLn . show) ("fromJust okRemove: " ++ show (fst (fromJust LHExercises.okRemove)))</span>
-<span class=hs-linenum>15: </span>    <span class='hs-comment'>-- else (putStrLn . show) ("isNothing okRemove: " ++ show (isNothing LHExercises.okRemove))</span>
-<span class=hs-linenum>16: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isNothing badRemove: " ++ show (isNothing LHExercises.badRemove))</span>
+<span class=hs-linenum>12: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isJust okRemove: " ++ show (isJust LHExercises.okRemoveMaybe))</span>
+<span class=hs-linenum>13: </span>    <span class='hs-comment'>-- if isJust LHExercises.okRemoveMaybe</span>
+<span class=hs-linenum>14: </span>    <span class='hs-comment'>--     then (putStrLn . show) ("fromJust okRemove: " ++ show (fst (fromJust LHExercises.okRemoveMaybe)))</span>
+<span class=hs-linenum>15: </span>    <span class='hs-comment'>-- else (putStrLn . show) ("isNothing okRemove: " ++ show (isNothing LHExercises.okRemoveMaybe))</span>
+<span class=hs-linenum>16: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isNothing badRemove: " ++ show (isNothing LHExercises.badRemoveMaybe))</span>
+<span class=hs-linenum>17: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>[GHC.Types.Char]</span><span class='hs-str'>"Exercise 9.4"</span></a>
 </pre>
 </body>
 </html>
