exam 2023 added & solved

--- a/liquid-haskell/session20/app/.liquid/Main.hs.cst.html
+++ b/liquid-haskell/session20/app/.liquid/Main.hs.cst.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>/home/alvarorp00/Documents/uam/master/verification/liquid-haskell/session20/app/Main.hs</title>
+<title>app/Main.hs</title>
 </head>
 <head>
 <link type='text/css' rel='stylesheet' href='liquid.css' />
@@ -10,7 +10,7 @@
 <body>
 <hr>
 Put mouse over identifiers to see inferred types
-<pre><span class=hs-linenum> 1: </span><a class=annot href="#"><span class=annottext>{VV##343 : GHC.Types.Module | $k_##344}</span><span class='hs-keyword'>module</span></a> <span class='hs-conid'>Main</span> <span class='hs-keyword'>where</span>
+<pre><span class=hs-linenum> 1: </span><a class=annot href="#"><span class=annottext>{VV##344 : GHC.Types.Module | $k_##345}</span><span class='hs-keyword'>module</span></a> <span class='hs-conid'>Main</span> <span class='hs-keyword'>where</span>
 <span class=hs-linenum> 2: </span>
 <span class=hs-linenum> 3: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>LHExercises</span>
 <span class=hs-linenum> 4: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Maybe</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Maybe</span>
@@ -18,17 +18,17 @@ Put mouse over identifiers to see inferred types
 <span class=hs-linenum> 6: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Tuple</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Tuple</span>
 <span class=hs-linenum> 7: </span>
 <span class=hs-linenum> 8: </span><span class='hs-definition'>main</span> <span class='hs-keyglyph'>::</span> <span class='hs-conid'>IO</span><span class='hs-conid'>()</span>
-<span class=hs-linenum> 9: </span><a class=annot href="#"><span class=annottext>(GHC.Types.IO {lq_tmp$x##464 : () | $k_##463[VV##462:=lq_tmp$x##464][lq_tmp$x##461:=Main.main]})</span><span class='hs-definition'>main</span></a> <span class='hs-keyglyph'>=</span> <span class='hs-keyword'>do</span>
-<span class=hs-linenum>10: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>{lq_tmp$x##377 : [GHC.Types.Char] | len lq_tmp$x##377 == strLen lq_anf$##7205759403792931965##dzZH
-                                    &amp;&amp; lq_tmp$x##377 ~~ lq_anf$##7205759403792931965##dzZH}</span><span class='hs-str'>"Exercise 9.3"</span></a>
+<span class=hs-linenum> 9: </span><a class=annot href="#"><span class=annottext>(GHC.Types.IO {lq_tmp$x##465 : () | $k_##464[VV##463:=lq_tmp$x##465][lq_tmp$x##462:=Main.main]})</span><span class='hs-definition'>main</span></a> <span class='hs-keyglyph'>=</span> <span class='hs-keyword'>do</span>
+<span class=hs-linenum>10: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>{lq_tmp$x##378 : [GHC.Types.Char] | len lq_tmp$x##378 == strLen lq_anf$##7205759403792801516##d23G
+                                    &amp;&amp; lq_tmp$x##378 ~~ lq_anf$##7205759403792801516##d23G}</span><span class='hs-str'>"Exercise 9.3"</span></a>
 <span class=hs-linenum>11: </span>    <span class='hs-comment'>-- Get element removed</span>
 <span class=hs-linenum>12: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isJust okRemove: " ++ show (isJust LHExercises.okRemoveMaybe))</span>
 <span class=hs-linenum>13: </span>    <span class='hs-comment'>-- if isJust LHExercises.okRemoveMaybe</span>
 <span class=hs-linenum>14: </span>    <span class='hs-comment'>--     then (putStrLn . show) ("fromJust okRemove: " ++ show (fst (fromJust LHExercises.okRemoveMaybe)))</span>
 <span class=hs-linenum>15: </span>    <span class='hs-comment'>-- else (putStrLn . show) ("isNothing okRemove: " ++ show (isNothing LHExercises.okRemoveMaybe))</span>
 <span class=hs-linenum>16: </span>    <span class='hs-comment'>-- (putStrLn . show) ("isNothing badRemove: " ++ show (isNothing LHExercises.badRemoveMaybe))</span>
-<span class=hs-linenum>17: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>{lq_tmp$x##405 : [GHC.Types.Char] | len lq_tmp$x##405 == strLen lq_anf$##7205759403792931968##dzZK
-                                    &amp;&amp; lq_tmp$x##405 ~~ lq_anf$##7205759403792931968##dzZK}</span><span class='hs-str'>"Exercise 9.4"</span></a>
+<span class=hs-linenum>17: </span>    <a class=annot href="#"><span class=annottext>(GHC.Types.IO ())</span><span class='hs-varid'>putStrLn</span></a> <a class=annot href="#"><span class=annottext>{lq_tmp$x##406 : [GHC.Types.Char] | len lq_tmp$x##406 == strLen lq_anf$##7205759403792801519##d23J
+                                    &amp;&amp; lq_tmp$x##406 ~~ lq_anf$##7205759403792801519##d23J}</span><span class='hs-str'>"Exercise 9.4"</span></a>
 </pre>
 </body>
 </html>
