--- a/liquid-haskell/session20/app/.liquid/Main.hs.html
+++ b/liquid-haskell/session20/app/.liquid/Main.hs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-<title>/home/alvarorp00/Documents/uam/master/verification/liquid-haskell/session20/app/Main.hs</title>
+<title>app/Main.hs</title>
 </head>
 <head>
 <link type='text/css' rel='stylesheet' href='liquid.css' />
