--- a/liquid-haskell/session20/src/.liquid/LHExercises.hs.html
+++ b/liquid-haskell/session20/src/.liquid/LHExercises.hs.html
@@ -14,7 +14,7 @@ Put mouse over identifiers to see inferred types
 </a><span class=hs-linenum>  2: </span><span class='hs-keyword'>module</span> <span class='hs-conid'>LHExercises</span> <span class='hs-keyword'>where</span>
 <span class=hs-linenum>  3: </span>
 <span class=hs-linenum>  4: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Maybe</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Maybe</span>
-<span class=hs-linenum>  5: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Tuple</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Tuple</span>
+<span class=hs-linenum>  5: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Data.Tuple</span> <span class='hs-keyword'>as</span> <span class='hs-conid'>Tuple</span><span class='hs-conid'>()</span>
 <span class=hs-linenum>  6: </span>
 <span class=hs-linenum>  7: </span><span class='hs-keyword'>import</span> <span class='hs-conid'>Prelude</span> <span class='hs-varid'>hiding</span> <span class='hs-layout'>(</span><span class='hs-varid'>replicate</span><span class='hs-layout'>)</span>
 <span class=hs-linenum>  8: </span>
